--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
           <button class="profile__add-btn" type="button">
             <img src="./images/plus.svg" alt="Plus Icon">
-            <span class="add-btn__text">New Post</span>
+            New Post
           </button>
         </section>
         <section class="cards page__section">
@@ -77,7 +77,6 @@
         </section>
       </main>
       <footer class="footer page__section">
-        <span class="footer__border"></span>
         <h2 class="footer__copyright">2024 &#169; Spots</h2>
       </footer>
     </div>
