3rd Submiission fixed few bugs

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Project 3 - TripleTen">
     <meta name="author" content="Medin Feratovic">
     <meta name="keywords" content="HTML, CSS, Project 3">
-    <link rel="stylesheet" href="blocks/index.css">
+    <link rel="stylesheet" href="pages/index.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
