edited index.html to include title and index.css to include normalize.css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="HTML, CSS, Project 3">
     <link rel="stylesheet" href="pages/index.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <title>Project 3 - TripleTen</title>
   </head>
   <body>
     <div class="page">
