added card array

--- a/index.html
+++ b/index.html
@@ -81,5 +81,6 @@
         <h2 class="footer__copyright">2024 &#169; Spots</h2>
       </footer>
     </div>
+    <script src="./scripts/index.js" defer></script>
   </body>
 </html>
