--- a/index.html
+++ b/index.html
@@ -82,16 +82,18 @@
       </footer>
       <div class="modal">
         <div class="modal__container">
-          <button class="modal__close-btn" type="submit"></button>
+          <button class="modal__close-btn" type="submit">
+            <img src="./images/close-icon.svg" alt="" class="close-btn__img">
+          </button>
           <h2 class="modal__title">Edit profile</h2>
           <form name="edit-profile" class="modal__form">
             <label class="modal__label" for="name">
               Name
-              <input type="text" id="name" class="modal__input" placeholder="Name"/>
+              <input type="text" id="name" class="modal__input" placeholder="Type your name"/>
             </label>
             <label class="modal__label" for="description">
               Description
-              <input type="text" id="description" class="modal__input" placeholder="Description" />
+              <input type="text" id="description" class="modal__input" placeholder="Describe yourself" />
             </label>
             <button class="modal__submit-btn" type="submit">Save</button>
           </form>
