Added modal visibility when clicking Edit Profile Button and Modal Close Button

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <footer class="footer page__section">
         <h2 class="footer__copyright">2024 &#169; Spots</h2>
       </footer>
-      <div class="modal">
+      <div class="modal" id="edit-modal">
         <div class="modal__container">
           <button class="modal__close-btn" type="submit">
             <img src="./images/close-icon.svg" alt="" class="close-btn__img">
