--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
         </section>
         <section class="cards page__section">
           <ul class="cards__list">
+
+            <template id="card-template">
+              <li class="card">
+                <img src="" alt="" class="card__image">
+                <div class="card__content">
+                  <h2 class="card__title"></h2>
+                  <button type="button" class="card__like-btn"></button>
+                </div>
+              </li>
+            </template>
+            <!-- Comment Out Hard Code
             <li class="card">
               <img src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg" alt="Val Thorens" class="card__image">
               <div class="card__content">
@@ -74,6 +85,7 @@
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
+          -->
           </ul>
         </section>
       </main>
@@ -87,13 +99,13 @@
           </button>
           <h2 class="modal__title">Edit profile</h2>
           <form name="edit-profile" class="modal__form">
-            <label class="modal__label" for="name">
+            <label class="modal__label" for="profile-name-input">
               Name
-              <input type="text" id="name" class="modal__input" placeholder="Type your name"/>
+              <input type="text" id="profile-name-input" class="modal__input" placeholder="Type your name"/>
             </label>
-            <label class="modal__label" for="description">
+            <label class="modal__label" for="profile-description-input">
               Description
-              <input type="text" id="description" class="modal__input" placeholder="Describe yourself" />
+              <input type="text" id="profile-description-input" class="modal__input" placeholder="Describe yourself" />
             </label>
             <button class="modal__submit-btn" type="submit">Save</button>
           </form>
