--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="modal" id="edit-modal">
         <div class="modal__container">
           <button class="modal__close-btn" type="submit">
-            <img src="./images/close-icon.svg" alt="" class="close-btn__img">
+            <img src="./images/close-icon.svg" alt="" class="modal__close-btn__img">
           </button>
           <h2 class="modal__title">Edit profile</h2>
           <form name="edit-profile" class="modal__form">
