--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
             <button type="button" class="profile__edit-btn">
-              <img src="./images/pencil.svg" alt="Pencil Icon">Edit profile
+              <img src="./images/pencil.svg" alt="Pencil Icon" class="profile__edit-btn">Edit profile
             </button>
           </div>
           <button class="profile__add-btn" type="button">
-            <img src="./images/plus.svg" alt="Plus Icon">
+            <img src="./images/plus.svg" alt="Plus Icon" class="profile__add-btn">
             New Post
           </button>
         </section>
@@ -95,7 +95,7 @@
       <div class="modal" id="edit-modal">
         <div class="modal__container">
           <button class="modal__close-btn" type="submit">
-            <img src="./images/close-icon.svg" alt="" class="modal__close-btn__img">
+            <img src="./images/close-icon.svg" alt="" class="modal__close-img">
           </button>
           <h2 class="modal__title">Edit profile</h2>
           <form name="edit-profile" class="modal__form">
