Edit after peer review

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
             <button type="button" class="profile__edit-btn">
-              <img src="./images/pencil.svg" alt="Pencil Icon" class="profile__edit-btn">Edit profile
+              <img src="./images/pencil.svg" alt="Pencil Icon">Edit profile
             </button>
           </div>
           <button class="profile__add-btn" type="button">
-            <img src="./images/plus.svg" alt="Plus Icon" class="profile__add-btn">
+            <img src="./images/plus.svg" alt="Plus Icon">
             New Post
           </button>
         </section>
