--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <img src="" alt="" class="card__image">
                 <div class="card__content">
                   <h2 class="card__title"></h2>
-                  <button type="button" class="card__like-btn"></button>
+                  <button type="button" class="card__like-btn--liked" id="like-btn"></button>
                 </div>
               </li>
             </template>
