--- a/index.html
+++ b/index.html
@@ -99,14 +99,18 @@
             <img src="./images/close-icon.svg" alt="" class="modal__close-img">
           </button>
           <h2 class="modal__title">Edit profile</h2>
-          <form name="edit-profile" class="modal__form">
+          <form name="edit-profile" class="modal__form" novalidate>
             <label class="modal__label" for="profile-name-input">
               Name
-              <input type="text" id="profile-name-input" class="modal__input" placeholder="Type your name"/>
+              <input type="text" id="profile-name-input" class="modal__input" placeholder="Type your name" required
+              minlength="2" maxlength="40"/>
+              <span id="profile-name-input-error" class="modal__error">Error!!!</span>
             </label>
             <label class="modal__label" for="profile-description-input">
               Description
-              <input type="text" id="profile-description-input" class="modal__input" placeholder="Describe yourself" />
+              <input type="text" id="profile-description-input" class="modal__input" placeholder="Describe yourself" required
+              minlength="2" maxlength="200"/>
+              <span id="profile-description-input-error" class="modal__error">Error!!!</span>
             </label>
             <button class="modal__submit-btn" type="submit">Save</button>
           </form>
@@ -118,16 +122,19 @@
             <img src="./images/close-icon.svg" alt="" class="modal__close-img">
           </button>
           <h2 class="modal__title">New Post</h2>
-          <form name="add-card-form" class="modal__form">
+          <form name="add-card-form" class="modal__form" novalidate>
             <label class="modal__label" for="add-card-link-input">
               Image Link
-              <input type="url" name="link" id="add-card-link-input" class="modal__input" placeholder="Paste a link to the picture"/>
+              <input type="url" name="link" id="add-card-link-input" class="modal__input" placeholder="Paste a link to the picture" required/>
+              <span id="add-card-link-input-error" class="modal__error">Error!!!</span>
             </label>
             <label class="modal__label" for="add-card-caption-input">
               Caption
-              <input type="text" name="caption" id="add-card-caption-input" class="modal__input" placeholder="Type your caption" />
+              <input type="text" name="caption" id="add-card-caption-input" class="modal__input" placeholder="Type your caption" required
+              minlength="2" maxlength="30"/>
+              <span id="add-card-caption-input-error" class="modal__error">Error!!!</span>
             </label>
-            <button class="modal__submit-btn" type="submit">Save</button>
+            <button class="modal__submit-btn modal__submit-btn_inactive" type="submit" disabled>Save</button>
           </form>
         </div>
       </div>
@@ -140,6 +147,8 @@
         </div>
       </div>
     </div>
+    <script src="./scripts/validation.js" defer></script>
     <script src="./scripts/index.js" defer></script>
+
   </body>
 </html>
