--- a/src/index.html
+++ b/src/index.html
@@ -6,27 +6,26 @@
     <meta name="description" content="Project 3 - TripleTen">
     <meta name="author" content="Medin Feratovic">
     <meta name="keywords" content="HTML, CSS, Project 3">
-    <link rel="stylesheet" href="src\pages\index.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>Project 3 - TripleTen</title>
   </head>
   <body>
     <div class="page">
       <header class="header">
-        <img src="./src/images/logo.svg" alt="" class="header__logo">
+        <img src="<%= require('./images/logo.svg')%>" alt="" class="header__logo">
       </header>
       <main class="content">
         <section class="profile page__section">
-          <img src="./src/images/avatar.jpg" alt="Bessie Coleman" class="profile__avatar">
+          <img src="<%= require('./images/avatar.jpg')%>" alt="Bessie Coleman" class="profile__avatar">
           <div class="profile__column">
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
             <button type="button" class="profile__edit-btn">
-              <img src="./src/images/pencil.svg" alt="Pencil Icon">Edit profile
+              <img src="<%= require('./images/pencil.svg')%>" alt="Pencil Icon">Edit profile
             </button>
           </div>
           <button class="profile__add-btn" type="button">
-            <img src="./src/images/plus.svg" alt="Plus Icon">
+            <img src="<%= require('./images/plus.svg')%>" alt="Plus Icon">
             New Post
           </button>
         </section>
@@ -45,42 +44,42 @@
             </template>
             <!-- Comment Out Hard Code
             <li class="card">
-              <img src="./src/images/1-photo-by-moritz-feldmann-from-pexels.jpg" alt="Val Thorens" class="card__image">
+              <img src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg" alt="Val Thorens" class="card__image">
               <div class="card__content">
                 <h2 class="card__title">Val Thorens</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./src/images/2-photo-by-ceiline-from-pexels.jpg" alt="Restaurant terrace" class="card__image">
+              <img src="./images/2-photo-by-ceiline-from-pexels.jpg" alt="Restaurant terrace" class="card__image">
               <div class="card__content">
                 <h2 class="card__title">Restaurant terrace</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./src/images/3-photo-by-tubanur-dogan-from-pexels.jpg" alt="An outdoor cafe" class="card__image">
+              <img src="./images/3-photo-by-tubanur-dogan-from-pexels.jpg" alt="An outdoor cafe" class="card__image">
               <div class="card__content">
                 <h2 class="card__title">An outdoor cafe</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./src/images/4-photo-by-maurice-laschet-from-pexels.jpg" alt="A very long bridge, over the forest..." class="card__image">
+              <img src="./images/4-photo-by-maurice-laschet-from-pexels.jpg" alt="A very long bridge, over the forest..." class="card__image">
               <div class="card__content">
                 <h2 class="card__title">A very long bridge, over the forest...</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./src/images/5-photo-by-van-anh-nguyen-from-pexels.jpg" alt="Tunnel with morning light" class="card__image">
+              <img src="./images/5-photo-by-van-anh-nguyen-from-pexels.jpg" alt="Tunnel with morning light" class="card__image">
               <div class="card__content">
                 <h2 class="card__title">Tunnel with morning light</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./src/images/6-photo-by-moritz-feldmann-from-pexels.jpg" alt="Mountain House" class="card__image">
+              <img src="./images/6-photo-by-moritz-feldmann-from-pexels.jpg" alt="Mountain House" class="card__image">
               <div class="card__content">
                 <h2 class="card__title">Mountain house</h2>
                 <button type="button" class="card__like-btn"></button>
@@ -96,7 +95,7 @@
       <div class="modal" id="edit-modal">
         <div class="modal__container">
           <button class="modal__close" type="submit">
-            <img src="./src/images/close-icon.svg" alt="" class="modal__close-img">
+            <img src="<%= require('./images/close-icon.svg')%>" alt="" class="modal__close-img">
           </button>
           <h2 class="modal__title">Edit profile</h2>
           <form name="edit-profile" class="modal__form" novalidate>
@@ -119,7 +118,7 @@
       <div class="modal" id="add-card-modal">
         <div class="modal__container">
           <button class="modal__close" type="submit">
-            <img src="./src/images/close-icon.svg" alt="" class="modal__close-img">
+            <img src="<%= require('./images/close-icon.svg')%>" alt="" class="modal__close-img">
           </button>
           <h2 class="modal__title">New Post</h2>
           <form name="add-card-form" class="modal__form" novalidate>
@@ -148,7 +147,7 @@
       </div>
     </div>
 
-    <script src="./src/scripts/index.js" type="module" defer></script>
+    
 
   </body>
 </html>
